outfiles/deduper.22691984.out
  File "/gpfs/projects/bgmp/ladriani/bioinfo/Bi624/Deduper-lisadriani/./Adriani_deduper.py", line 64
    count = f"key,"\t",value"
                    ^
SyntaxError: unexpected character after line continuation character
Command exited with non-zero status 1
	Command being timed: "./Adriani_deduper.py -f /projects/bgmp/shared/deduper/C1_SE_uniqAlign.sam -o test/bigone.sam -u unit_test_folder/STL96.txt"
	User time (seconds): 0.00
	System time (seconds): 0.00
	Percent of CPU this job got: 85%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:00.01
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 6128
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 0
	Minor (reclaiming a frame) page faults: 1808
	Voluntary context switches: 26
	Involuntary context switches: 2
	Swaps: 0
	File system inputs: 0
	File system outputs: 0
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
